# interpolative_coding

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
include/: interpolative_coding.hpp
src/: CMakeLists.txt  check.cpp  decode.cpp  encode.cpp
test/: CMakeLists.txt  example.cpp
